# budgetbros-budget-api

./: AGENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
budget_api/: auth.py  db.py  dependencies.py  main.py  models.py  tables.py
budget_api/data/: __init__.py  currencies.py
budget_api/data_access/: __init__.py  accounts.py  budgets.py  categories.py  currencies.py  payees.py  tags.py  transactions.py
budget_api/models/: __init__.py  accounts.py  budgets.py  categories.py  currencies.py  payees.py  tags.py  transactions.py  users.py
budget_api/routers/: __init__.py  accounts.py  budgets.py  categories.py  currencies.py  payees.py  tags.py  transactions.py  users.py  utils.py
budget_api/services/: __init__.py  accounts.py  budgets.py  categories.py  currencies.py  payees.py  tags.py  transactions.py
diagrams/: budgetbros-table-diagram.drawio  tables.mmd
plans/: 00-overview.md  01-account-budget-currency.md  02-transactions-create.md  03-transactions-list.md  04-transactions-get.md  05-transactions-update.md  06-transactions-delete.md  07-transaction-split.md  08-transfers.md  09-bulk-import.md  10-schema-diagrams.md  api-surface-roadmap.md  categories-api-plan.md  payees-api-plan.md  tags-api-plan.md  users-api-plan.md
tests/: conftest.py  test_accounts.py  test_auth.py  test_budget_members.py  test_budgets.py  test_categories.py  test_currencies.py  test_main.py  test_payees.py  test_tags.py  test_transactions.py  test_users.py
