[project]
name = "budgetbros-budget-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "cognito-jwt-verifier",
]

[dependency-groups]
dev = [
  "pytest",
  "asgi-lifespan",
]
